--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -147,7 +147,12 @@ tbody {
 .watchlist-name-title{
   color: #6397ff;
   font-weight: bolder;
-  font-size: 40px;
+  font-size: 38px;
+}
+.watchlist-username-title{
+  color: #9960cc;
+  font-weight: bolder;
+  font-size: 38px;
 }
 
 .overview-select{
@@ -177,11 +182,23 @@ tbody {
   color: white;
 }
 
-.Welcome3{
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+.main-heading2{
+  font-size: 30px;
+}
+
+.to-watchlist-link {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.to-watchlist-link a{
+  transition: 0.3s;
+  color: #43a1e8;
+  border-bottom: #46eb7a 1px solid;
+}
+
+.to-watchlist-link a:hover{
+  transition: 0.3s;
+  font-weight: bold;
+  border-bottom: #46eb7a 2px solid;
 }
