--- a/Prescient/static/styles/performance-styles.css
+++ b/Prescient/static/styles/performance-styles.css
@@ -100,3 +100,35 @@ tbody {
   color: white;
   transition: 0.7s;
 }
+
+.Welcome2{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.main-heading2{
+  font-size: 30px;
+}
+
+.to-watchlist-link {
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.to-watchlist-link a{
+  transition: 0.3s;
+  color: #43a1e8;
+  border-bottom: #46eb7a 1px solid;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.to-watchlist-link a:hover{
+  transition: 0.3s;
+  font-weight: bold;
+  border-bottom: #46eb7a 2px solid;
+}
